# atl-zemi-third

./: .env.dev.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  main.py  poker_logic.py  pyproject.toml
backend/src/app/: config.py  exceptions.py  main.py
backend/supabase/migrations/: 001_create_tables.sql  002_rls_policies.sql  003_food_master_seed.sql  004_plan_rpc_functions.sql  005_log_unique_and_plan_update.sql  006_mext_foods_and_recipes.sql  007_user_recipe_favorites.sql  008_plan_meta.sql  009_recipe_ingredient_nutrition.sql  010_nutrition_status.sql  011_mext_foods_display_name.sql  012_shopping_list_checks.sql  013_recipe_generated_steps.sql  018_job_logs.sql  (+6 more)
backend/tests/: conftest.py  test_accompaniment_filter.py  test_adaptation_engine.py  test_admin_training_progressions.py  test_admin_youtube.py  test_api_feedback.py  test_api_foods.py  test_api_goals.py  test_api_logs.py  test_api_plans.py  test_api_plans_recipe_swap.py  test_api_profiles.py  test_api_recipe_detail.py  test_api_recipes_refresh.py  test_api_review.py  test_api_shopping_checks.py  test_auth.py  test_batch_adapt.py  test_deduplication.py  test_e2e_feedback_loop.py  test_exceptions.py  test_favorite_repo.py  test_feedback_repo_serialization.py  test_gemini_display_name.py  test_gemini_mext_matcher.py  test_ingredient_cache_repo.py  test_ingredient_matcher.py  test_integration_db.py  test_integration_recipe_flow.py  test_logic.py  test_meal_suggestion.py  test_mext_excel_loader.py  test_mext_scraper.py  test_nutrition_engine.py  test_nutrition_fallback.py  test_plan_repo.py  test_plan_validator.py  test_rakuten_category_utils.py  test_rakuten_recipe.py  test_rebuild_recipe_ingredients.py  (+17 more)
(+185 files in other folders)
